# oapi-spec.yml
@@ -1,15 +1,20 @@
 openapi: 3.0.0
+info:
+  title: Open Insurance Brasil APIs
+  version: 1.0.0
 paths:
   /consents/v2/consents:
     post:
       operationId: CreateConsentV2
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateConsentRequestV2'
       responses:
         '201':
+          description: Consentimento criado com sucesso.
           content:
             application/json:
               schema:
@@ -21,6 +26,7 @@ paths:
           - $ref: '#/components/parameters/consentId'
       responses:
         '200':
+          description: Consentimento consultado com sucesso.
           content:
             application/json:
               schema:
@@ -31,12 +37,13 @@ paths:
         - $ref: '#/components/parameters/consentId'
       responses:
         '204':
-          description: .
+          description: Consentimento revogado com sucesso.
   /customers/v1/personal/identifications:
     get:
       operationId: PersonalIdentificationsV1
       responses:
         "200":
+          description: Dados sobre identificação pessoa física.
           content:
             application/json:
               schema:
@@ -46,6 +53,7 @@ paths:
       operationId: PersonalQualificationsV1
       responses:
         "200":
+          description: Dados sobre qualificação da pessoa física.
           content:
             application/json:
               schema:
@@ -55,6 +63,7 @@ paths:
       operationId: PersonalComplimentaryInfoV1
       responses:
         "200":
+          description: Dados sobre relacionamento da pessoa física
           content:
             application/json:
               schema:
@@ -69,6 +78,7 @@ paths:
         - $ref: '#/components/parameters/pageSize'
       responses:
           '200':
+            description: Dados de status dos recursos obtidos com sucesso.
             content:
               application/json:
                 schema:
@@ -83,6 +93,7 @@ paths:
         - $ref: '#/components/parameters/pageSize'
       responses:
         '200':
+          description: Dados de ResponseInsuranceCapitalizationTitle obtidos com sucesso
           content:
             application/json:
               schema:
@@ -96,6 +107,7 @@ paths:
         - $ref: "#/components/parameters/planId"
       responses:
         '200':
+          description: Dados de ResponseInsuranceCapitalizationTitlePlanInfo obtidos com sucesso
           content:
             application/json:
               schema:
@@ -132,6 +144,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CapitalizationTitleSettlementsResponseV1"
+  /endorsement/v1/request/{consentId}:
+    post:
+      summary: Envia os dados inseridos manualmente para a solicitação de endosso
+      description: "Método para a criação da solicitação de endosso."
+      operationId: CreateEndorsementV1
+      parameters:
+        - $ref: '#/components/parameters/consentId'
+      requestBody:
+        description: Payload para criação da notificação.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateEndorsementRequestV1'
+      responses:
+        '201':
+          description: Solicitação de endosso enviada com sucesso.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EndorsementResponseV1'
 components:
   schemas:
     ResponseError:
@@ -140,11 +173,9 @@ components:
         - errors
       properties:
         errors:
-          type: array
-          minItems: 1
-          maxItems: 13
-          items:
-            $ref: '#/components/schemas/Error'
+          oneOf:
+            - $ref: '#/components/schemas/Error'
+            - $ref: '#/components/schemas/Errors'
         meta:
           $ref: '#/components/schemas/Meta'
     Error:
@@ -172,6 +203,12 @@ components:
           maxLength: 20
           format: date-time
       additionalProperties: false
+    Errors:
+      type: array
+      minItems: 1
+      maxItems: 13
+      items:
+        $ref: '#/components/schemas/Error'
     Links:
       type: object
       required:
@@ -203,6 +240,15 @@ components:
           maxLength: 2000
           pattern: ^(https:\/\/)(.*?)(\/open-insurance\/consents\/v\d+)(\/.*)?$
       additionalProperties: false
+    RedirectLinks:
+      type: object
+      required:
+        - redirect
+      properties:
+        redirect:
+          description: Campo destinado a disponibilização de links de acesso a outros materiais.
+          type: string
+          example: 'https://www.abcseguros.com/resource?id=000123'
     Meta:
       type: object
       required:
@@ -2068,7 +2114,154 @@ components:
           type: string
           format: date
           example: "2023-01-30"
-    
+    CreateEndorsementRequestV1:
+      type: object
+      required:
+        - data
+      properties:
+        data:
+          type: object
+          required:
+            - policyNumber
+            - endorsementType
+            - requestDescription
+            - requestDate
+          properties:
+            policyNumber:
+              description: Número da apólice, conforme regulamentação vigente
+              type: string
+              maxLength: 60
+              example: "111111"
+            endorsementType:
+              $ref: '#/components/schemas/EndorsementType'
+            requestDescription:
+              description: Descrição adicional do endosso
+              type: string
+              maxLength: 1024
+              example:  Descrição adicional do endosso.
+            requestDate:
+              description: Data de Solicitação do Endosso
+              type: string
+              format: date
+              maxLength: 10
+              example: '2022-11-01'
+            customData:
+              $ref: '#/components/schemas/EndorsementCustomData'
+          additionalProperties: false
+    EndorsementResponseV1:
+      type: object
+      required:
+        - data
+        - links
+      properties:
+        data:
+          $ref: '#/components/schemas/EndorsementData'
+        links:
+            $ref: '#/components/schemas/RedirectLinks'
+      additionalProperties: false
+    EndorsementData:
+      type: object
+      required:
+        - policyNumber
+        - endorsementType
+        - requestDescription
+        - requestDate
+        - protocolNumber
+        - protocolDateTime
+      properties:
+        protocolNumber:
+          description: Identificador da Solicitação do Endosso, conforme protocolo interno da seguradora avisada.
+          type: string
+          maxLength: 60
+        protocolDateTime:
+            description: Data e hora do protocolamento do endosso, conforme especificação RFC-3339, formato UTC.
+            type: string
+            maxLength: 20
+            format: date-time
+            example: '2021-08-20T08:30:00Z'
+        policyNumber:
+          description: Número da apólice, conforme regulamentação vigente
+          type: string
+          maxLength: 60
+          example: "111111"
+        endorsementType:
+          $ref: '#/components/schemas/EndorsementType'
+        requestDescription:
+          description: Descrição adicional do endosso
+          type: string
+          maxLength: 1024
+          example:  Descrição adicional do endosso.
+        requestDate:
+          description: Data de Solicitação do Endosso
+          type: string
+          format: date
+          maxLength: 10
+          example: '2022-11-01'
+        customData:
+          $ref: '#/components/schemas/EndorsementCustomData'
+    EndorsementCustomData:
+      type: object
+      properties:
+        customerIdentification:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        customerQualification:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        customerComplimentaryInfo:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        businessIdentification:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        businessQualification:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        businessComplimentaryInfo:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        generalQuoteInfo:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        riskLocationInfo:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        insuredObjects:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        beneficiaries:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+        coverages:
+          type: array
+          items:
+            $ref: '#/components/schemas/CustomInfoData'
+    CustomInfoData:
+      type: object
+      description: Estrutura para identificação e transmissão de dados customizáveis.
+      required:
+        - fieldId
+        - value
+      properties:
+        fieldId:
+          type: string
+          pattern: '^[a-zA-Z0-9][a-zA-Z0-9\-]{0,99}$'
+          maxLength: 100
+          description: Um identificador único usado para identificar o valor transmitido.
+          example: 578-psd-71md6971kjh-2d414
+        value:
+          description: Valor do campo identificado acima, esse campo pode ser implementado como qualquer tipo de dado (objeto, texto, número, booleano, etc.)
+      additionalProperties: false
   parameters:
     consentId:
       name: consentId
